<resources>
    <string name="app_name">EventHub</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="font_regular">Roboto-Regular.ttf</string>
    <string name="font_bold">Roboto-Bold.ttf</string>
    <string name="font_title">Knockout-29.otf</string>
    <string name="font_title_bold">Knockout-93.otf</string>
    <string name="title_activity_event_details">EventDetailsActivity</string>
    <string name="title_activity_recommended_event">RecommendedEventActivity</string>
    <string name="title_activity_artist">ArtistActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_manage_artist">ManageArtist</string>
    <string name="title_activity_manage_artisan">ManageArtisanActivity</string>
    <string name="title_activity_location">Location</string>
    <string name="title_activity_manage_my_artist">Manage My Artist</string>
    <string name="sample_letter">C</string>
    <string name="artist_with_events">Show only artist with events</string>
    <string name="rescan">Rescan</string>
    <string name="action_edit">Edit</string>
    <string name="title_activity_maps">Map</string>

    <string name="google_maps_key_gilo">AIzaSyCeV5FFtSD7R5hzZwGT6mXWw63uu5TnKe8</string>
    <string name="google_maps_key">AIzaSyCIyochgCukq6-I1NtSFSbpuSSKesrkYcI</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="legal_notice">Stubhub Music Terms of use</string>
    <string name="title_activity_upcoming_events">UpcomingEventsActivity</string>
    <string name="title_activity_search">SearchActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_ticket_information">Buy Tickets From Here</string>
    <string name="no_artist_found">No artist found</string>
    <string name="no_events_found">No events found</string>
    <string name="favorite_events_info">YOUR FAVORITE EVENTS WILL APPEAR HERE</string>
    <string name="no_upcoming_events">No upcoming events for this artist</string>
    <string name="no_venues_found">No venuws found</string>
    <string name="no_recommeneded_events">No recommended events at the moment</string>
    <string name="no_recommended_events">No recommended events</string>
</resources>
