<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:customfontdemo="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="0dp"
    android:background="#ffffff"
    android:elevation="8dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:background="@color/primary"
        android:orientation="horizontal">

        <com.yogesh.eventhub.ui.views.CustomFontTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:gravity="left"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:text="venue"
            android:textAllCaps="true"
            android:textColor="#ffffff"
            android:textSize="20dp"
            customfontdemo:fontName="@string/font_title" />

        <com.yogesh.eventhub.ui.views.CustomFontTextView
            android:id="@+id/tvEvent_details_venue_distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginBottom="00dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:gravity="right"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:text="20 km"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="16dp"
            customfontdemo:fontName="@string/font_regular" />


    </LinearLayout>

    <ImageView
        android:id="@+id/ivEvent_details_venue_image"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        android:src="@drawable/nairobi_map2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="horizontal"
        android:paddingBottom="4dp"
        android:paddingLeft="16dp"
        android:paddingRight="8dp"
        android:paddingTop="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pin" />


        <LinearLayout
            android:id="@+id/llVenue_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingBottom="4dp"
            android:paddingLeft="8dp"
            android:paddingRight="0dp"
            android:paddingTop="0dp">

            <TextView
                android:id="@+id/tvEvent_details_venue_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginBottom="00dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="0dp"
                android:gravity="left"
                android:maxLines="4"
                android:paddingBottom="0dp"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:paddingTop="0dp"
                android:text="Ngong Racecourse"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvEvent_details_venue_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginBottom="00dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="0dp"
                android:gravity="left"
                android:maxLines="4"
                android:paddingBottom="0dp"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:paddingTop="0dp"
                android:text="Ngong Road,"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvEvent_details_venue_city_and_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginBottom="00dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="0dp"
                android:gravity="left"
                android:maxLines="4"
                android:paddingBottom="0dp"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:paddingTop="0dp"
                android:text="Nairobi, Kenya"

                android:textColor="@color/black"
                android:textSize="14sp" />


        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider" />

    <com.yogesh.eventhub.ui.views.CustomFontTextView
        android:id="@+id/tvEvent_details_venue_more_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginBottom="00dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:gravity="left"
        android:maxLines="1"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="0dp"
        android:paddingTop="16dp"
        android:text="venue page"
        android:textAllCaps="true"
        android:textColor="@color/primary"
        android:textSize="12sp"
        android:textStyle="bold"
        android:visibility="gone"
        customfontdemo:fontName="@string/font_bold" />

</LinearLayout>

